fixed gaps

--- a/src/components/CTA/CTA.module.scss
+++ b/src/components/CTA/CTA.module.scss
@@ -40,6 +40,7 @@
 		font-weight: 400;
 		line-height: 114.286%;
 		font-family: var(--font-playfair-display);
+		white-space: nowrap;
 		@media (max-width: 1200px) {
 			font-size: 2.4rem;
 		}
