--- a/src/components/CustomDecoration/CustomDecoration.module.scss
+++ b/src/components/CustomDecoration/CustomDecoration.module.scss
@@ -28,7 +28,7 @@
 				color: $azul;
 			}
 			h3 {
-				margin-block: 64px;
+				margin-block: 32px 64px;
 				font-size: 5rem;
 				font-family: var(--font-playfair-display);
 				font-style: normal;
